Fixes issue in theme file.

--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -157,7 +157,7 @@ $posterHeight: calc(3 / 2 * $posterWidth);
   flex-direction: column;
   .title {
     font-family: "Product Sans";
-    font-size: 2em
+    font-size: 2em;
 
     position: relative;
     top: -12px;
