Take Angular SSR into use

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,14 +2,14 @@
   &#9426; Jari Kuisma {{ today | date : "YYYY" }}
   |
   <span
-    (click)="window.open('https://www.linkedin.com/in/kuismajari/')"
+    (click)="window?.open('https://www.linkedin.com/in/kuismajari/')"
     title="Jari Kuisma @ LinkedIn"
     style="text-decoration: underline"
     >LinkedIn</span
   >
   |
   <span
-    (click)="window.open('https://github.com/acoustic-/poll-a-lot')"
+    (click)="window?.open('https://github.com/acoustic-/poll-a-lot')"
     style="text-decoration: underline"
     >Github</span
   >
