Improve font-sizes to be more legible. Add watched movie-poll-item style.

--- a/src/app/movie-poll-item/movie-poll-item.component.html
+++ b/src/app/movie-poll-item/movie-poll-item.component.html
@@ -13,6 +13,7 @@
         class="option-card"
         [class.condensed-view]="condensedView"
         [class.not-voteable]="!voteable"
+        [class.watched]="useSeenReaction && (movieReactionWatched$ | async)"
         >
         <div class="flex-column flex-grow">
           <div class="flex flex-grow">
