--- a/src/app/poster/poster.component.html
+++ b/src/app/poster/poster.component.html
@@ -11,6 +11,7 @@
     @if (posterPath) {
       <img
         class="poster fade-in-out"
+        alt="Movie poster"
       [lazyLoad]="
         'https://image.tmdb.org/t/p/w92' +
         posterPath +
