Minor style fix for condensed view.

--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -562,6 +562,10 @@
         margin-bottom: 3px;
       }
 
+      .original-title {
+        margin-top: -2px;
+      }
+
       .subtitle {
         font-size: 0.65em;
       }
