--- a/src/app/watch-list-marker/watch-list-marker.component.scss
+++ b/src/app/watch-list-marker/watch-list-marker.component.scss
@@ -4,12 +4,12 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 
-  filter: drop-shadow(1px 1px 3px #00000082);
+  filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 1));
 
   &:not(.active) {
     // background-image: linear-gradient(#eaeaea, #fff);
-    background-image: linear-gradient(#eaeaea, #ffffff82);
-    filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.9));
+    background-image: linear-gradient(rgba(234, 234, 234, 0.75), rgba(255, 255, 255, 0.4));
+    filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 1));
   }
 
   &.size-xs {
