Fixes issue with reseting poll date.

--- a/src/app/poll/edit-poll-dialog/edit-poll-dialog.component.html
+++ b/src/app/poll/edit-poll-dialog/edit-poll-dialog.component.html
@@ -33,8 +33,8 @@
     </mat-form-field>
     <span
       class="cursor-pointer clear-date"
-      (click)="pollTemp.date = {}"
-      style="font-size: 2em; color: grey; margin: auto auto 30px 11px"
+      (click)="pollTemp.date = null"
+      style="font-size: 2em; color: grey; margin: auto auto 39px 11px"
       >&times;</span
     >
   </div>
