Take bottomsheet into use for movie service provider selector and edit poll view. Start using theme styles and design tokens and style variables more. Use more material components such as mat-buttons. Remove font-awesome dependency.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <!-- This fills the remaining space of the current row -->
   <button
     class="add-new-button"
-    mat-button
+    mat-icon-button
     (click)="addPoll()"
     title="Create new poll"
     >
