--- a/src/app/voter/voter.component.html
+++ b/src/app/voter/voter.component.html
@@ -2,7 +2,7 @@
   <div class="votes" [matTooltip]="pollItem.voters | voters : 'Voters: '">
     <span>{{ pollItem.voters.length }}</span>
   </div>
-  <div class="button-container">
+  <div class="button-container" matRipple matRippleColor="#fbf8fd78">
     <div color="primary" class="favorite">
       <mat-icon class="heart-icon">favorite</mat-icon>
     </div>
