--- a/src/app/watch-providers/select-providers-dialog/select-providers-dialog.scss
+++ b/src/app/watch-providers/select-providers-dialog/select-providers-dialog.scss
@@ -46,11 +46,6 @@
   top: 0;
 }
 
-.close-button {
-  position: fixed;
-  font-size: 10px;
-  color: white;
-  text-shadow: 0px 0px 6px #0000009c;
-  z-index: 10;
-  padding: 6px 15px 10px 20px;
+.mat-mdc-dialog-actions {
+  justify-content: space-between;
 }
