--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -25,12 +25,14 @@
 
 .add-new-button {
   z-index: 1;
-  color: white;
+  --mdc-icon-button-icon-color: white;
+
 }
 
 .navigation-menu {
   margin-left: auto;
   z-index: 1;
+  --mdc-icon-button-icon-color: white;
 }
 
 .mat-toolbar {
