--- a/src/app/login-dialog/login-dialog.component.html
+++ b/src/app/login-dialog/login-dialog.component.html
@@ -49,7 +49,7 @@
   </div>
   <div mat-dialog-actions class="flex">
     <button
-      class="close-button"
+      class="close"
       mat-button
       [mat-dialog-close]="data.nickname"
       aria-label="Close"
