--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -60,10 +60,9 @@
 
   .poster-container {
     position: relative;
-    top: -24px;
+    // top: -24px;
     left: -34px;
     margin-right: -12px;
-    // z-index: 2;
   }
 
   .title {
@@ -220,19 +219,8 @@
   }
 
   .show-more {
-    text-transform: uppercase;
-    font-size: 0.5em;
-    width: 100%;
-    text-align: center;
-    color: #717171;
-    padding-bottom: 10px;
-    padding-top: 9px;
-    user-select: none;
-
-    flex-grow: 1;
-    align-items: flex-end;
-    justify-content: center;
-    display: flex;
+    align-self: flex-end;
+    margin-top: auto;
   }
 
   .bg {
@@ -371,7 +359,7 @@
     .reaction {
       position: relative;
       user-select: none;
-      padding: 6px 0;
+      padding: 0;
       transition: all 0.6s ease;
       display: flex;
       flex-direction: column;
@@ -379,7 +367,7 @@
       align-items: center;
     }
 
-    .fa-solid {
+    .reaction .mat-icon {
       position: relative;
       z-index: 3;
       text-shadow: 0 0 4px #5e5e5e4a;
@@ -408,13 +396,13 @@
 
     &:not(.open) {
       height: 28px;
-      padding: 0;
+      padding: 3px 0 0;
       opacity: 0.6;
 
       .reaction {
-        max-height: 17px;
+        min-height: 24px;
 
-        i {
+        mat-icon {
           opacity: 1;
         }
       }
@@ -555,6 +543,10 @@
     padding: 2px 16px 2px 16px;
     margin: 0px 0px 2px 20px;
 
+    .content {
+      padding-top: 12px;
+    }
+
     .movie-info {
       .overview-info {
         display: none;
@@ -590,9 +582,15 @@
     }
 
     .movie-reactions {
-      font-size: 10px;
+      
+      .mat-icon {
+        font-size: 14px;
+        height: 14px;
+        width: 14px;
+      }
 
       height: 30px;
+
       &:not(.open) {
         height: 20px;
       }
@@ -602,6 +600,7 @@
       top: 0;
       left: -34px;
       margin-right: -16px;
+      margin-top: 9px;
     }
 
     .controls {
@@ -621,13 +620,8 @@
     }
 
     .show-more {
-      position: relative;
-      right: 0;
-      text-align: right;
-      justify-content: right;
-      bottom: 0;
-      padding-bottom: 2px;
-      margin-top: -9px;
+      --mdc-text-button-label-text-size: 8px;
+      --mdc-text-button-container-height: 18px;
     }
 
     .creator {
