--- a/src/app/series-poll-item/series-poll-item.component.html
+++ b/src/app/series-poll-item/series-poll-item.component.html
@@ -50,9 +50,7 @@
               }
             </div>
           </div>
-          <div class="show-more" (click)="shortened = !shortened">
-            {{ shortened ? "Show more info" : "Show less" }}
-          </div>
+        <button mat-button class="show-more" (click)="shortened = !shortened">{{ shortened ? "Show more info" : "Show less" }}</button>
         </div>
         @if (removable || voteable) {
           <div class="controls">
