--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -1,5 +1,5 @@
-@use '@angular/material' as mat;
-@use './m3-theme.scss';
+@use "@angular/material" as mat;
+@use "./m3-theme.scss";
 
 @include mat.core();
 
@@ -18,9 +18,50 @@ html {
     --mdc-switch-selected-hover-handle-color: #836ce2 !important;
     --mdc-switch-selected-focus-state-layer-color: #836ce2 !important;
     --mdc-switch-selected-focus-handle-color: #836ce2 !important;
-    --mdc-switch-selected-track-color: #d9c6ee  !important;
-    --mdc-switch-selected-pressed-track-color: #d9c6ee  !important;
-    --mdc-switch-selected-hover-track-color: #d9c6ee  !important;
-    --mdc-switch-selected-focus-track-color: #d9c6ee  !important;
+    --mdc-switch-selected-track-color: #d9c6ee !important;
+    --mdc-switch-selected-pressed-track-color: #d9c6ee !important;
+    --mdc-switch-selected-hover-track-color: #d9c6ee !important;
+    --mdc-switch-selected-focus-track-color: #d9c6ee !important;
+    --mdc-switch-selected-icon-color: #fbf8fd;
+    --mdc-switch-track-height: 24px;
+    --mat-switch-track-outline-color: #d9c6ee;
+    --mat-switch-track-outline-width: 2px;
+  }
+
+  .mdc-button {
+    --mdc-text-button-container-shape: 5px;
+    --mdc-protected-button-container-shape: 5px;
+  }
+
+  .close-button {
+    --mdc-text-button-label-text-color: white;
+    --mdc-text-button-label-text-size: 12px;
+    text-shadow: 0px 0px 6px #0000009c;
+    z-index: 20;
+    position: fixed;
+  }
+
+  .show-more {
+    --mdc-text-button-label-text-size: 10px;
+    --mdc-text-button-label-text-color: #717171;
+    text-transform: uppercase;
+  }
+
+  .mat-mdc-card {
+    --mdc-elevated-card-container-shape: 5px;
+  }
+
+  .mat-mdc-dialog-surface {
+    --mdc-dialog-container-shape: 5px;
+  }
+
+  .mat-mdc-menu-panel {
+    --mat-menu-container-color: #f5eefc;
+  }
 }
+
+:root {
+  @include mat.all-component-themes(m3-theme.$light-theme);
+  @include mat.system-level-colors(m3-theme.$light-theme);
+  @include mat.system-level-typography(m3-theme.$light-theme);
 }
